--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -44,15 +44,15 @@ jobs:
           node-version: 22.x
       - name: Install Artifact Cache
         uses: Swatinem/rust-cache@v2
-      - name: Build Book (HTML Target)
+      - name: Build Book (Paged Target)
         run: |
-          cargo run --release --bin shiroa -- build --font-path assets/fonts --path-to-root /shiroa/html/ -w . github-pages/docs --mode static-html
-          mv ./github-pages/dist/ ./github-pages/dist-html/
+          cargo run --release --bin shiroa -- build --font-path assets/fonts --path-to-root /shiroa/html/ -w . github-pages/docs
+          mv ./github-pages/dist/ ./github-pages/dist-paged/
           mkdir -p ./github-pages/dist/
-          mv ./github-pages/dist-html ./github-pages/dist/html
+          mv ./github-pages/dist-paged ./github-pages/dist/paged
       - name: Build Book
         run: |
-          cargo run --release --bin shiroa -- build --font-path assets/fonts --path-to-root /shiroa/ -w . github-pages/docs
+          cargo run --release --bin shiroa -- build --font-path assets/fonts --path-to-root /shiroa/ -w . github-pages/docs --mode static-html
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
