--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,14 +81,16 @@ typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typ
 typst-eval = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0-rc1" }
 # typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
 
-reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "5cdaded77bfd667818d1b8e95f29e3dd5e493089" }
-reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "5cdaded77bfd667818d1b8e95f29e3dd5e493089" }
+reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "0eee46894a09a4da5caff1610a3c99e8552bce86" }
+reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "0eee46894a09a4da5caff1610a3c99e8552bce86" }
 
-# typst-shim = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "461d65b5bf62599132ca85707b62612611026a11" }
-# tinymist-std = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "461d65b5bf62599132ca85707b62612611026a11" }
-# tinymist-task = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "461d65b5bf62599132ca85707b62612611026a11" }
-# tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "461d65b5bf62599132ca85707b62612611026a11" }
-# tinymist-project = { git = "https://github.com/Myriad-Dreamin/tinymist", rev = "461d65b5bf62599132ca85707b62612611026a11" }
+typst-shim = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "81cedd9819d72b77de46fac7a32d936e3d9c868d" }
+tinymist-derive = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "81cedd9819d72b77de46fac7a32d936e3d9c868d" }
+tinymist-std = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "81cedd9819d72b77de46fac7a32d936e3d9c868d" }
+tinymist-task = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "81cedd9819d72b77de46fac7a32d936e3d9c868d" }
+tinymist-package = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "81cedd9819d72b77de46fac7a32d936e3d9c868d" }
+tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "81cedd9819d72b77de46fac7a32d936e3d9c868d" }
+tinymist-project = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "81cedd9819d72b77de46fac7a32d936e3d9c868d" }
 
 # typst = { path = "../typst/crates/typst" }
 # typst-syntax = { path = "../typst/crates/typst-syntax" }
